@@ -2,7 +2,7 @@
 # CustomerFooter.dtl - provides global HTML footer
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CustomerFooter.dtl,v 1.34 2010-09-23 10:58:00 mb Exp $
+# $Id: CustomerFooter.dtl,v 1.35 2010-10-12 15:35:53 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,7 +10,9 @@
 # --
 
 <div id="Footer" class="ARIARoleContentinfo">
+<!-- dtl:block:Banner -->
     <a href="http://otrs.org/">$Text{"Powered by"} $Config{"Product"} $Config{"Version"}</a>
+<!-- dtl:block:Banner -->
     <div class="Clear"></div>
 </div>
 
