@@ -2,7 +2,7 @@
  * This CSS defines the general Footer shown on all modules/sites.
  *
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.1 $
+ * @version     $Revision: 1.2 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -16,6 +16,7 @@
 
 #Footer {
     margin-top: 1px;
+    min-height: 15px;
     padding: 12px 9px 8px;
     border-top: 1px solid #999;
     font-size: 10px;
